Image Alignment Fixed

--- a/css/custom.css
+++ b/css/custom.css
@@ -19,7 +19,7 @@
 
 .nav.navbar-nav.navbar-right li a:active, .nav.navbar-nav.navbar-left li a:active{
 	color: white !important;
-	background-color: red;
+	background-color: #222222;
 }
 
 .navbar li a, .navbar .navbar-brand { 
@@ -33,9 +33,9 @@
 .about-section {
     height: 100%;
 	width: auto;
-    padding-top: 100px;
+    padding-top: 75px;
 	padding-bottom: 100px;
-    text-align: left;
+    text-align: center;
     background: #23538a;
 	background: -moz-linear-gradient(45deg,  #23538a 3%, #a7cfdf 91%);
 	background: -webkit-linear-gradient(45deg,  #23538a 3%,#a7cfdf 91%);
@@ -63,13 +63,14 @@
 }
 
 .prantar-image{
+	padding-top:50px;
+	padding-bottom:40px;
 	transform:rotate(90deg);
-	max-width:110%;
+	max-width:80%;
 	min-width:243.2px;
-	max-height:110%;
+	max-height:80%;
 	min-height:182.4px;
 	border-radius: 50%;
-	align: left;
 }
 
 footer {
